# race-raven

./: CMakeLists.txt  CMakePresets.json  README.md  build_artifacts.sh  build_artifacts_in_docker_image.sh  clean_artifacts.sh
.github/workflows/: ci.yml
kit/channels/raven/: Dockerfile  channel_properties.json  docker-compose.yml  generate_configs.py  get_status_of_external_services.sh  start_external_services.sh  stop_external_services.sh
kit/channels/raven/config/: postfix-accounts.cf
kit/channels/raven/scratch/: generate-postfix-accounts-cf.sh
source/: .gitignore  CMakeLists.txt  CommsPlugin.go  channels.go  emily.go  gan-emulator.go  gen-gpg-keys.go  go.mod  go.sum  loader.cpp  manifest.json  raven-keyfile.json
source/emily-testing/: emily.go  gan-emulator.go  gen-gpg-keys.go  main.go  raven-keyfile.json
test/: README.md
test/cpp-app/: CMakeLists.txt
